# clinic_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  admin_app.py  bot_texts.py  config.py  constants.py  database.py  handlers.py  keyboards.py  loyalty_reminders.py  main.py  middlewares.py  models.py  phone_utils.py  repository.py  services.py
bot/static/: admin.css
bot/templates/: base.html  bot_texts.html  dashboard.html  documents.html  guides.html  leads.html  login.html  loyalty_reminders.html  users.html
marulidi_dental_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_admin_app.py  test_bot_texts.py  test_keyboards.py  test_loyalty_reminders.py  test_phone_utils.py  test_services.py
