[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marulidi-dental-bot"
version = "0.1.0"
description = "Telegram lead bot for MARULIDI dental clinic"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MARULIDI" }]
dependencies = [
  "aiogram>=3.7.0,<4.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "fastapi>=0.112.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.setuptools]
packages = ["bot"]
include-package-data = true

[tool.setuptools.package-data]
bot = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
